# GEO-Project

./: .gitignore  CLAUDE.md  DEPLOY.md  LOCAL_WINDOWS.md  geo-analyzer-demo.html  render.yaml  setup-windows.ps1  start-backend.bat  start-frontend.bat
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: analyses.py  brands.py  citations.py  owned_media.py  rankings.py  search.py  strategy.py
backend/app/jobs/: __init__.py
backend/app/models/: __init__.py  analysis.py  brand.py  run.py  strategy.py
backend/app/providers/: __init__.py  anthropic_adapter.py  base.py  factory.py  gemini_adapter.py  mock_adapter.py  openai_adapter.py
backend/app/schemas/: analysis.py  brand.py  citation.py  owned_media.py  ranking.py  search.py  strategy.py
backend/app/services/: citation.py  prompt_gen.py  ranking.py  search_runner.py  strategy.py
backend/tests/: conftest.py  test_api.py  test_citation.py  test_prompt_gen.py  test_provider_selection.py  test_providers.py  test_ranking.py  test_run.py  test_strategy.py
frontend/: .env.example  package.json  pnpm-lock.yaml  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/landing/: page.tsx
frontend/app/report/: page.tsx
frontend/components/: CitationShare.tsx  OwnedMediaRegistry.tsx  PromptList.tsx  RankingChart.tsx  RankingTable.tsx  SearchResult.tsx  StrategyReport.tsx
frontend/lib/: api.ts  chartTheme.ts  demo.ts
