[project]
name = "geo-analyzer-backend"
version = "0.1.0"
description = "GEO (Generative Engine Optimization) analysis tool — backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "pandas>=2.2",
    "anthropic>=0.40",
    "openai>=1.54",
    "google-genai>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's Depends() in defaults is the idiomatic pattern.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# conftest sets env vars before importing app modules (order is intentional).
"tests/conftest.py" = ["E402", "I001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
